POC for setting up ASM on GKE with Helloworld & Registry-Backend

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: [ 'build', '--build-arg', 'DB_CONFIG=${_DB_CONFIG}', '-t', 'gcr.io/${_REGISTRY_PROJECT_IDENTIFIER}/registry-backend', '.']
-images: ['gcr.io/${_REGISTRY_PROJECT_IDENTIFIER}/registry-backend']
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '--build-arg', 'DB_CONFIG=${_DB_CONFIG}', '-t', 'gcr.io/${_REGISTRY_PROJECT_IDENTIFIER}/registry-backend-noproxy', '-f', 'deployments/container/Dockerfile.noproxy', '.']
+images: ['gcr.io/${_REGISTRY_PROJECT_IDENTIFIER}/registry-backend', 'gcr.io/${_REGISTRY_PROJECT_IDENTIFIER}/registry-backend-noproxy']
