--- a/deployments/container/Dockerfile.noproxy
+++ b/deployments/container/Dockerfile.noproxy
@@ -29,11 +29,16 @@ RUN CGO_ENABLED=0 GOOS=linux go build -v -o registry-server ./cmd/registry-serve
 # Use the official Alpine image for a lean production container.
 # https://hub.docker.com/_/alpine
 # https://docs.docker.com/develop/develop-images/multistage-build/#use-multi-stage-builds
-FROM alpine:3
-RUN apk add --no-cache ca-certificates
+FROM gcr.io/google.com/cloudsdktool/cloud-sdk:alpine
+RUN apk add --no-cache curl vim lsof ca-certificates
+
+ARG DB_CONFIG=registry
 
 # Copy the binary to the production image from the builder stage.
 COPY --from=builder /app/registry-server /registry-server
 
+# Copy configuration files to the production image.
+COPY config/${DB_CONFIG}.yaml /registry.yaml
+
 # Run the web service on container startup.
-CMD ["/registry-server"]
+CMD ["/registry-server", "-c", "registry.yaml"]
