--- a/deployments/gke/service.yaml
+++ b/deployments/gke/service.yaml
@@ -3,6 +3,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: registry-backend
+  namespace: registry
+  labels:
+    app: registry-backend
+    service: registry-backend
 spec:
   type: LoadBalancer
   selector:
